# LREngine

./: .gitignore  CMakeLists.txt
Doc/: LREngine_Documentation.md  LREngine_Texture_Design.md  Metal_Platform_Compatibility_Analysis.md  Metal_Rendering_Pipeline_Guide.md
demo/: README.md
demo/LREngine/: iOS_Demo_Setup_Guide.md
demo/LREngine/LREngine/: AppDelegate.swift  LREngine-Bridging-Header.h  LREngineBridge.h  LREngineBridge.mm  SceneDelegate.swift  ViewController.swift
demo/LREngine/LREngine.xcodeproj/: project.pbxproj
demo/LREngine/LREngine.xcodeproj/project.xcworkspace/xcuserdata/bigo.xcuserdatad/: UserInterfaceState.xcuserstate
demo/LREngine/LREngine.xcodeproj/xcuserdata/bigo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
demo/LREngine/LREngine.xcodeproj/xcuserdata/bigo.xcuserdatad/xcschemes/: xcschememanagement.plist
demo/LREngineAndroid/: settings.gradle.kts
demo/LREngineAndroid/app/: build.gradle.kts
demo/LREngineAndroid/app/src/androidTest/java/com/example/lrenginedemo/: ExampleInstrumentedTest.kt
demo/LREngineAndroid/app/src/main/: AndroidManifest.xml
demo/LREngineAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo/LREngineAndroid/app/src/main/cpp/include/lrengine/core/: LRBuffer.h  LRFence.h  LRPipelineState.h  LRResource.h  LRTexture.h
demo/LREngineAndroid/app/src/main/cpp/include/lrengine/math/: Mat3.hpp  MathDef.hpp  Quaternion.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
demo/LREngineAndroid/app/src/main/java/com/example/lrenginedemo/: LREngineRenderer.kt  LREngineSurfaceView.kt  MainActivity.kt
demo/LREngineAndroid/app/src/main/java/com/example/lrenginedemo/ui/theme/: Color.kt  Theme.kt  Type.kt
demo/LREngineAndroid/app/src/main/res/values/: strings.xml  themes.xml
demo/LREngineAndroid/app/src/test/java/com/example/lrenginedemo/: ExampleUnitTest.kt
demo/LREngineAndroid/gradle/wrapper/: gradle-wrapper.properties
examples/: CMakeLists.txt
examples/HelloTriangle/: main.cpp
examples/HelloTriangleMTL/: main.mm
examples/RenderToTextureGL/: README.md  main.cpp
examples/RenderToTextureMTL/: README.md  main.mm
examples/TexturedCubeGL/: main.cpp
examples/TexturedCubeMTL/: main.mm
include/lrengine/core/: LRBuffer.h  LRDefines.h  LRError.h  LRFrameBuffer.h  LRPipelineState.h  LRPlanarTexture.h  LRRenderContext.h  LRShader.h  LRTexture.h  LRTypes.h
include/lrengine/factory/: LRDeviceFactory.h
include/lrengine/math/: Mat3.hpp  Mat4.hpp  MathDef.hpp  MathFwd.hpp  Quaternion.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
include/lrengine/utils/: ImageBuffer.h  ImageBufferPool.h  LRLog.h
script/: Android_Integration_Guide.md  README.md  build_android.sh  build_ios.sh  iOS_Integration_Guide.md  iOS_Quick_Reference.md  verify_ios_build.sh
src/core/: LRBuffer.cpp  LRError.cpp  LRFence.cpp  LRFrameBuffer.cpp  LRPipelineState.cpp  LRPlanarTexture.cpp  LRRenderContext.cpp  LRResource.cpp  LRShader.cpp  LRTexture.cpp
src/factory/: LRDeviceFactory.cpp
src/platform/gles/: BufferGLES.cpp  BufferGLES.h  ContextGLES.cpp  ContextGLES.h  DeviceFactoryGLES.cpp  DeviceFactoryGLES.h  FenceGLES.cpp  FenceGLES.h  FrameBufferGLES.cpp  FrameBufferGLES.h  GLESCapabilities.cpp  GLESCapabilities.h  PipelineStateGLES.cpp  PipelineStateGLES.h  ShaderGLES.cpp  ShaderGLES.h  TextureGLES.cpp  TextureGLES.h  TypeConverterGLES.h
src/platform/interface/: IBufferImpl.h  IFenceImpl.h  IFrameBufferImpl.h  IPipelineStateImpl.h  IRenderContextImpl.h  IShaderImpl.h  ITextureImpl.h
src/platform/metal/: BufferMTL.h  BufferMTL.mm  CommandBufferPoolMTL.h  CommandBufferPoolMTL.mm  ContextMTL.h  ContextMTL.mm  ContextMTL.mm.bak  ContextMTL.mm.bak2  DeviceFactoryMTL.h  DeviceFactoryMTL.mm  FenceMTL.h  FenceMTL.mm  FrameBufferMTL.h  FrameBufferMTL.mm  PipelineStateMTL.h  PipelineStateMTL.mm  RenderPassMTL.h  RenderPassMTL.mm  RenderStateStackMTL.h  RenderStateStackMTL.mm  ShaderMTL.h  ShaderMTL.mm  TextureMTL.h  TextureMTL.mm  TypeConverterMTL.h
src/platform/opengl/: BufferGL.cpp  BufferGL.h  ContextGL.cpp  ContextGL.h  DeviceFactoryGL.cpp  DeviceFactoryGL.h  FenceGL.cpp  FenceGL.h  FrameBufferGL.cpp  FrameBufferGL.h  PipelineStateGL.cpp  PipelineStateGL.h  ShaderGL.cpp  ShaderGL.h  StateCacheGL.cpp  StateCacheGL.h  TextureGL.cpp  TextureGL.h  TypeConverterGL.cpp  TypeConverterGL.h
src/utils/: ImageBuffer.cpp  ImageBufferPool.cpp  LRLog.cpp
tests/: CMakeLists.txt  TestLRLog.cpp
